--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "redux": "^4.1.2",
     "sfcookies": "^1.0.2",
     "styled-components": "^5.3.3",
+    "uuid": "^8.3.2",
+    "uuidv4": "^6.2.13",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
